<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.r7b7</groupId>
	<artifactId>web-scrybe</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>web-scrybe</name>
	<description>Java based tool to search web</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.8.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.34</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webflux</artifactId>
			<version>6.1.14</version>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.2.0</version>
		</dependency>
		<!-- Test Dependencies-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<scope>test</scope>
		</dependency>
	</dependencies>
	<properties>
		<java.version>21</java.version>
		<!-- Sonar properties -->
		<sonar.coverage.exclusions>
			**/model/**/*,
			**/entity/**/*,
			**/dto/**/*,
			**/config/**/*,
			**/exception/**/*,
			**/client/**/*,
			**/WebSearchApplication.java,
			**/BingSearchService.java,
			**/GoogleSearchService.java,
			**/DuckDuckGoService.java
		</sonar.coverage.exclusions>
		<!-- Files to exclude from analysis -->
		<sonar.exclusions>
			**/test/**/*,
			**/generated-sources/**/*,
			**/generated/**/*,
			**/target/**/*,
			**/*Constants*
		</sonar.exclusions>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    	<sonar.jacoco.reportPath>${project.build.directory}/jacoco.exec</sonar.jacoco.reportPath>
    	<sonar.language>java</sonar.language>
    	<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>    
    	<sonar.test.exclusions>src/test/resources/**</sonar.test.exclusions>
    	<sonar.coverage.minimum>90</sonar.coverage.minimum>
    	<sonar.junit.reportPaths>${project.build.directory}/surefire-reports</sonar.junit.reportPaths>

	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
            	<groupId>org.sonarsource.scanner.maven</groupId>
            	<artifactId>sonar-maven-plugin</artifactId>
            	<version>3.9.1.2184</version>
        	</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<!-- Exclude entire packages -->
								<exclude>com/r7b7/webscrybe/model/**/*</exclude>
								<exclude>com/r7b7/webscrybe/entity/**/*</exclude>
								<exclude>com/r7b7/webscrybe/client/**/*</exclude>
								<exclude>com/r7b7/webscrybe/config/**/*</exclude>
								<exclude>com/r7b7/webscrybe/exception/**/*</exclude>
								
								<!-- Exclude specific classes -->
								<exclude>com/r7b7/webscrybe/*Application.*</exclude>
								<exclude>com/r7b7/webscrybe/service/*BingSearchService.*</exclude>
								<exclude>com/r7b7/webscrybe/service/*GoogleSearchService.*</exclude>
								<exclude>com/r7b7/webscrybe/service/*DuckDuckGoService.*</exclude>
								
								<!-- Exclude generated classes -->
								<exclude>**/generated/**/*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<includes>
                            <!-- Only include packages/classes that are not excluded -->
                            			<include>com/r7b7/webscrybe/service/*</include>
										<include>com/r7b7/webscrybe/controller/*</include>
                        			</includes>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.90</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
                	</execution>
				</executions>
        	</plugin>
		</plugins>
	</build>
</project>
